--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title:          Tale
 description:    "Minimal Jekyll theme for storytellers"
-baseurl:        ""
-url:            "https://chesterhow.github.io"
+baseurl:        "/us-post-offices/docs"
+url:            "cblevins.github.io"
 
 # Google Analytics
 google_analytics: UA—XXXXXXXX-X
